--- a/Continents_test.Rmd
+++ b/Continents_test.Rmd
@@ -207,7 +207,7 @@ transparent_main_toxin_producers_cont_plot <- main_toxin_producers_cont_plot +
 
 ## Produce a single image for the two previous plots
 
-```{r combined, fig.width=10}
+```{r combined, fig.asp= 0.5, fig.width=10}
 med_subset <- head(main_toxin_producers_globally,8)
 med_subset$subset <- "Mediterranean"
 
@@ -236,7 +236,8 @@ combined <-
   theme(legend.position = "bottom", legend.direction = "horizontal") +
   coord_flip()  + 
   theme(axis.text.x = element_text(angle = 0)) + 
-  theme(axis.title = element_text(size = 16), 
+  theme(axis.title = element_text(size = 16),
+        strip.text = element_text(size = 16), 
     axis.text = element_text(size = 12), 
     plot.title = element_text(size = 14), 
     plot.background = element_rect(colour = NA)) +
